# moonbeam-studio

./: .env  dump.rdb  run_pipeline.py  script.txt  test_brain.py
api/: main.py  tasks.py
brain/: llm_wrapper.py  structure_planner.py
critic/: hard_scorer.py  midi_polisher.py  soft_refiner.py
engine/: HarmonyRouter.py  agentic_composer.py  generation.py  motif_memory.py  test_harmony_router.py
engine/ties_core/: Cargo.toml
engine/ties_core/src/: lib.rs
shared/: music_theory_constants.py
