[package]
name    = "ties_core"
version = "0.1.0"
edition = "2021"

[lib]
name       = "ties_core"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.21", features = ["extension-module"] }
numpy  = "0.21"
rayon  = "1.10"

[profile.release]
opt-level = 3
lto       = true   # link-time optimisation — smaller + faster binary
codegen-units = 1  # slower compile, faster runtime